navbar not showing error fixed

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,9 @@ body {
     overflow-x: hidden;
 }
 
-
+body {
+    height: auto !important;
+}
 
 html {
     scroll-behavior: smooth;
